--- a/war/ClimateChangeApp.css
+++ b/war/ClimateChangeApp.css
@@ -3,6 +3,8 @@ body{
 }
 
 .tableHeader {
+	border: 1px solid silver;
+	padding: 2px;
 	background-color: #abbdd6;
 	color: #000000;
 	font-style: italic;
@@ -29,7 +31,8 @@ h1 {
   font-size: 2em;
   font-weight: bold;
   color: #777777;
-  margin: 40px 0px 70px;
+  margin: 0px 0px 0px;
+  
   text-align: center;
 }
 
